--- a/homepage.html
+++ b/homepage.html
@@ -37,7 +37,7 @@
       
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item"><a href="index.html"></a></li>
           <li class="breadcrumb-item active" aria-current="page">Event Information/>
         </ol>
       </nav>
