--- a/eventinfo.html
+++ b/eventinfo.html
@@ -22,10 +22,10 @@
                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="program.html">IS Program</a>
+                <a class="nav-link" href="program.html">Event Info</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact Us</a>
+                <a class="nav-link" href="contact.html">Event Evaluation</a>
               </li>
             
             </ul>
