--- a/homepage.html
+++ b/homepage.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid"> 
-          <a class="navbar-brand" href="#">Welcome to the Event HomePage</a>
+          <a class="navbar-brand" href="#">Welcome to the Event Home Page!</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -34,8 +34,8 @@
                   Option 1
                 </div>
                 <div class="card-body">
-                  <h5 class="card-title">event photo</h5>
-                  <p class="card-text">info about event</p>
+                  <h5 class="card-title">Information about Upcoming Events </h5>
+                  <p class="card-text">Here you will be able to look at past and upcoming events. Look at the detailed descriptions and note down the time and date so you don't miss it!</p>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
