--- a/homepage.html
+++ b/homepage.html
@@ -46,8 +46,8 @@
                   Option 2
                 </div>
                 <div class="card-body">
-                  <h5 class="card-title">event photo</h5>
-                  <p class="card-text">info about event </p>
+                  <h5 class="card-title">Ticket Information</h5>
+                  <p class="card-text">Don't have a ticket yet? No worries! You'll be able to purchase one online right now and immediately get the unique QR code! </p>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
@@ -59,8 +59,8 @@
                   Option 3
                 </div>
                 <div class="card-body">
-                  <h5 class="card-title">event photo</h5>
-                  <p class="card-text">info about event </p>
+                  <h5 class="card-title">Thank you to our sponsors!</h5>
+                  <p class="card-text">Read more about the heroes before our event's success and everything that goes on behind the scenes. This wouldn't have been possible without our sponsors. Thank you!</p>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
