--- a/eventinfo.html
+++ b/eventinfo.html
@@ -56,7 +56,7 @@
                   </h2>
                   <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        <strong> </strong> https://informationsystems.umbc.edu/home/faculty-and-staff/faculty/
+                        <strong> </strong> Upcoming Job Fair: August 18th, 2023 at 3PM! Get your tickets today. Over 50 companies will be attending and conducting interviews on the spot. Don't miss out!
                   </div>
                 </div>
                 <div class="accordion-item">
@@ -67,7 +67,7 @@
                   </h2>
                   <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      
+                        <strong> </strong> Tickets going fast! Free entry to the job fair if you graduated in the last year. Otherwise $10! Purchase now and get your tickets electronically ASAP.
                     </div>
                   </div>
                 </div>
@@ -79,7 +79,7 @@
                   </h2>
                   <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                    
+                        <strong> </strong> Please stop by and say thank you to our Marketing team for putting together this event! It wouldn't have been possible without them.
                     </div>
                   </div>
                 </div>
