--- a/homepage.html
+++ b/homepage.html
@@ -19,7 +19,7 @@
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href=homepage.html>Home</a>
               <a class="nav-link" href=eventinfo.html>Event Info </a>
-              
+              <a class="nav-link" href=ticket.html>Buy your tickets!</a>
             
             </div>
           </div>
