--- a/ticket.html
+++ b/ticket.html
@@ -12,29 +12,13 @@
       <input type="tel" id="phone" name="visitor_phone" placeholder="498-348-3872" pattern=(\d{3})-?\s?(\d{3})-?\s?(\d{4}) required>
     </div>
     <hr>
-    <div class="elem-group inlined">
-     
-    <div class="elem-group inlined">
-      <label for="checkin-date">Check-in Date</label>
-      <input type="date" id="checkin-date" name="checkin" required>
-    </div>
-    <div class="elem-group inlined">
-      <label for="checkout-date">Check-out Date</label>
-      <input type="date" id="checkout-date" name="checkout" required>
-    </div>
-    <div class="elem-group">
-      <label for="room-selection">Select Room Preference</label>
-      <select id="room-selection" name="room_preference" required>
-          <option value="">Choose a Room from the List</option>
-          <option value="connecting">Connecting</option>
-          <option value="adjoining">Adjoining</option>
-          <option value="adjacent">Adjacent</option>
-      </select>
+   
+
     </div>
     <hr>
     <div class="elem-group">
       <label for="message">Anything Else?</label>
       <textarea id="message" name="visitor_message" placeholder="Tell us anything else that might be important." required></textarea>
     </div>
-    <button type="submit">Book The Rooms</button>
+    <button type="submit">Book My Ticket!</button>
   </form>
