--- a/eventinfo.html
+++ b/eventinfo.html
@@ -22,7 +22,9 @@
                 
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="program.html">Event Info</a>
+                <a class="nav-link active" aria-current="page" href=homepage.html>Home</a>
+              <a class="nav-link" href=eventinfo.html>Event Info </a>
+              <a class="nav-link" href=ticket.html>Buy your tickets!</a>
               </li>
               <li class="nav-item">
                
