--- a/ticket.html
+++ b/ticket.html
@@ -1,3 +1,6 @@
+
+<a class="nav-link" href=ticket.html>Buy your tickets!</a>
+
 <form action="reservation.php" method="post">
     <div class="elem-group">
       <label for="name">Your Name</label>
