--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href=homepage.html>Home</a>
+              <a class="nav-link active" aria-current="page" href=index.html>Home</a>
               <a class="nav-link" href=eventinfo.html>Event Info </a>
               <a class="nav-link" href=ticket.html>Buy your tickets!</a>
             
