--- a/ticket.html
+++ b/ticket.html
@@ -1,5 +1,5 @@
 
-<a class="nav-link active" aria-current="page" href=homepage.html>Home</a>
+<a class="nav-link active" aria-current="page" href=index.html>Home</a>
 <a class="nav-link" href=eventinfo.html>Event Info </a>
 <a class="nav-link" href=ticket.html>Buy your tickets!</a>
 
